--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React with Dave Gray</title>
   </head>
-  <body style="min-height: 100vh;">
-    <div id="root"></div>
+  <body style="min-height: 100vh;" class="bg-[#efefef]">
+    <div id="root" class=""></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
